--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="localhost:5173/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io();
+    </script> -->
   </body>
 </html>
